--- a/cumpleanos-america/index.html
+++ b/cumpleanos-america/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>¡Feliz Cumpleaños! 🎂</title>
-    <link rel="stylesheet" href="cumpleanos-america.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Globos flotantes -->
@@ -159,6 +159,6 @@
       </div>
     </div>
 
-    <script src="cumpleanos-america.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
